# moon

./: .env.example  BOOTSTRAP_GUIDE.md  Cargo.toml  MIP-20260302-Markdown-Native-Context.md  MIP-CONTEXT-CACHE-PLAN.md  README.md  SKILL.md  SKILL_SUBAGENT.md  build.rs  identity_transition_report.md  mip-lanceDB.md  mip-memory-archi.md  mip20260225.md  mip20260228.md  moon-cli-list.md  moon.toml.example  syns-strategy.md
assets/plugin/: README.md  index.js  openclaw.plugin.json  package.json
docs/: contracts.md  failure_policy.md  runbook.md  security_checklist.md
src/: assets.rs  cli.rs  env_loader.rs  error.rs  logging.rs  main.rs
src/commands/: install.rs  mod.rs  moon_config.rs  moon_distill.rs  moon_embed.rs  moon_health.rs  moon_index.rs  moon_recall.rs  moon_restart.rs  moon_snapshot.rs  moon_status.rs  moon_stop.rs  moon_watch.rs  post_upgrade.rs  repair.rs  status.rs  verify.rs
src/moon/: archive.rs  audit.rs  config.rs  continuity.rs  daemon_lock.rs  distill.rs  embed.rs  mod.rs  paths.rs  prune.rs  qmd.rs  session_usage.rs  state.rs  thresholds.rs  util.rs  warn.rs  watcher.rs
src/openclaw/: config.rs  doctor.rs  gateway.rs  mod.rs  paths.rs  plugin_install.rs  plugin_verify.rs
tests/: config_patch_test.rs  context_policy_test.rs  cwd_validation_test.rs  failure_path_test.rs  idempotency_test.rs  install_flow_test.rs  moon_embed_test.rs  moon_index_test.rs  moon_recall_test.rs  moon_restart_test.rs  moon_snapshot_test.rs  moon_state_path_default_test.rs  moon_stop_test.rs  moon_watch_test.rs  post_upgrade_test.rs  status_provenance_diagnostic_test.rs
