[package]
name = "oc-token-optim"
version = "0.1.0"
edition = "2024"
description = "Rust CLI for OpenClaw session lifecycle automation: archive, index, recall, and low-cost distillation."
license = "MIT"
repository = "https://github.com/coinbuidl/moon-system"
homepage = "https://github.com/coinbuidl/moon-system"
readme = "README.md"
keywords = ["openclaw", "llm", "cli", "memory", "context"]
categories = ["command-line-utilities"]
default-run = "MOON"

[[bin]]
name = "MOON"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
json5 = "0.4"
tempfile = "3.13"
which = "7.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sha2 = "0.10"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
dotenvy = "0.15"
fs2 = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
